# QuadMind

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
QMorphLib/: ArrayList.h  CMakeLists.txt  Constants.h  Dart.cpp  Dart.h  DelaunayMeshGen.cpp  DelaunayMeshGen.h  Edge.cpp  Edge.h  Element.cpp  Element.h  GeomBasics.cpp  GeomBasics.h  GlobalSmooth.cpp  GlobalSmooth.h  MeshLoader.cpp  MeshLoader.h  Msg.cpp  Msg.h  MyLine.cpp  MyLine.h  MyVector.cpp  MyVector.h  Node.cpp  Node.h  Numbers.cpp  Numbers.h  QMorph.cpp  QMorph.h  QMorphLib.cpp  QMorphLib.sln  QMorphLib.vcxproj  QMorphLib.vcxproj.filters  Quad.cpp  Quad.h  Ray.cpp  Ray.h  TopoCleanup.cpp  TopoCleanup.h  Triangle.cpp  (+2 more)
QuadMindConsole/: CMakeLists.txt  QuadMindConsole.cpp  QuadMindConsole.vcxproj  QuadMindConsole.vcxproj.filters
UnitTest/: CMakeLists.txt  TestArrayList.cpp  TestEdge.cpp  TestElement.cpp  TestMyVector.cpp  TestNode.cpp  TestRay.cpp  TestTriangle.cpp  UnitTest.vcxproj
